Added kotlin documentation example

--- a/10-easy-wasy-to-contribute-to-opensource-es.tex
+++ b/10-easy-wasy-to-contribute-to-opensource-es.tex
@@ -96,7 +96,13 @@
     \end{itemize}
     
     \vspace{1em}
-    \uncover<5->{\textbf{Ejemplo:} \small\link{https://github.com/jpos/jPOS/pull/467}{Documentación de una funcionalidad extrayendo ejemplos del código fuente}}
+    \uncover<5->
+    {\textbf{Ejemplos:}}
+    \begin {itemize}
+        \item \small\link{https://github.com/JetBrains/kotlin-web-site/pull/4486}{Mejora de la documentación de kotlin}
+        ( \small\link{https://kotlinlang.org/docs/kotlin-tour-control-flow.html\#loops}{Kotlin tour: control flow})
+        \item \small\link{https://github.com/jpos/jPOS/pull/467}{Documentación de una funcionalidad extrayendo ejemplos del código fuente}
+    \end {itemize}
 \end{frame}
 
 \subsection{Reporte de Errores}
